<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/m_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/textViewResetPassword"
        style="@style/TextAppearance.MyTheme.Headline4"
        android:layout_width="match_parent"
        android:textColor="@color/m_blue_dark"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewResetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

           <EditText
               android:id="@+id/editTextUserNameSignIn"
               android:layout_width="match_parent"
               android:layout_height="64dp"
               android:background="@drawable/back_edittext"
               android:layout_margin="16dp"
               android:drawableStart="@drawable/ic_profile"
               android:drawablePadding="12dp"
               android:drawableTint="@color/m_blue_dark"
               android:hint="User name"
               android:gravity="center_vertical"
               android:textColor="@color/m_blue_dark"
               android:layout_gravity="center"
               android:textColorHint="#48595959"
               android:maxLines="1"
               style="@style/TextAppearance.MyTheme.Headline3"
               android:maxLength="28"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <EditText
                android:id="@+id/editTextPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_edittext"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="Password"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:drawableTint="@color/m_blue_dark"
                android:gravity="center_vertical"
                android:textColor="@color/m_blue_dark"
                android:layout_gravity="center"
                android:textColorHint="#48595959"
                android:maxLines="1"
                android:inputType="textPassword"
                style="@style/TextAppearance.MyTheme.Headline3"
                android:maxLength="25"/>

            <ImageView
                android:id="@+id/btnShowPasswordSigninActivity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_show"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="38dp"
                app:tint="@color/m_blue_dark"/>
        </FrameLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonForgetPasswordSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/vazir_bold"
            android:layout_marginLeft="16dp"
            android:textColor="@color/m_blue"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToSignUp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonSignInSignIn"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/vazir_bold"
        android:text="I don't have account"
        android:textAllCaps="false"
        android:textColor="@color/m_blue"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignInSignIn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/yekan_bold"
        android:gravity="center"
        android:text="@string/sign_in_fa"
        android:textColor="@color/m_blue_dark"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:rippleColor="#338A8A8A"
        app:strokeColor="@color/m_blue_dark"
        app:strokeWidth="2sp" />

</RelativeLayout>